# C2048

./: .gitignore  CMakeLists.txt  Makefile  run.sh
.cache/clangd/index/: cocoa_init.m.A5186D4588C13338.idx  cocoa_joystick.h.996D91BB634EEDD0.idx  cocoa_joystick.m.4E5A690D6E6AD2BB.idx  cocoa_monitor.m.0357D85E57E76406.idx  cocoa_platform.h.C7F6DC20484E31BD.idx  cocoa_time.c.075F6F542FD65546.idx  cocoa_time.h.D8C857BB2CD98BC6.idx  cocoa_window.m.21FB4B0E917CBBB7.idx  context.c.5C41A916C180DBF9.idx  egl_context.c.D7B995B2111F57BB.idx  glfw3.h.7969E6AB455DAB02.idx  init.c.3B79FB5E309245B3.idx  input.c.A97F44D40E33E8BA.idx  internal.h.5F18913762C9FC72.idx  main.c.C0043B3CB3D92897.idx  mappings.h.AF27DB0FB863BB7D.idx  monitor.c.955E1498C6CD7964.idx  nsgl_context.m.6715F3E6D0B4B9FB.idx  null_init.c.4BC71ED259A7212B.idx  null_joystick.c.BE4E46B0648E9248.idx  null_joystick.h.0EDD86C1E14307AA.idx  null_monitor.c.7A00EC3DCADA47AF.idx  null_platform.h.C1BBFB4C341868BE.idx  null_window.c.6856AC45CD9A791B.idx  osmesa_context.c.35A4DF6951174DF9.idx  platform.c.66D89A1ADBE4FB91.idx  platform.h.91118B7ADB393590.idx  posix_module.c.C06CAC7EA6BA50BE.idx  posix_thread.c.32C88D032ED1DAF9.idx  posix_thread.h.04AB3931AF26437C.idx  vulkan.c.4912B7B359DE7D8D.idx  window.c.568709D53FC5B27B.idx
submodules/glad/include/glad/: glad.h
submodules/glad/src/: glad.c
